--- a/src/blocks/reset/reset.scss
+++ b/src/blocks/reset/reset.scss
@@ -8,4 +8,10 @@
     max-width: 341px;
     margin: 0;
   }
+
+  @media screen and (max-width: 768px) {
+    &__title {
+      text-align: center;
+    }
+  }
 }
