--- a/src/blocks/room-comments/room-comments.scss
+++ b/src/blocks/room-comments/room-comments.scss
@@ -28,4 +28,10 @@
       margin-bottom: 22px;
     }
   }
+
+  @media screen and (max-width: 415px) {
+    &__header {
+      justify-content: center;
+    }
+  }
 }
