--- a/src/blocks/rules/rules.scss
+++ b/src/blocks/rules/rules.scss
@@ -4,4 +4,10 @@
     margin-left: 19px;
     margin-bottom: 13px;
   }
+
+  @media screen and (max-width: 768px) {
+    &__title {
+      text-align: center;
+    }
+  }
 }
